--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
                  -->
 
 
+
+                            <!-- delete -->
+                            <div class="item">
+                                <div class="item-container">
+                                    <div class="item-img">
+                                        <img src="./img/Clothing-Fill-Color(1).png" alt="">
+                                    </div>
+                                    <div class="desc">
+                                        <h2>product.name</h2>
+                                        <h2> <small>$</small> $ product.price</h2>
+                                        <p>product.description</p>
+                                    </div>
+                                    <div class="add-to-wishlist">
+                                        <img src="./icons/heart.png" alt="">
+                                    </div>
+                                    <div class="add-to-cart">
+                                        <img src="./icons/bag-plus.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- delete -->
             </div>
 
             <div class="cart">
@@ -94,6 +116,24 @@
                         </div>
 
                     -->
+
+                    
+<!-- delete -->
+
+<div class="cart-item">
+    <div class="item-info">
+        <img src="./img/Clothing-Fill-Color(1).png" alt="">
+        <h4>item.name</h4>
+    </div>
+    <div class="unit-price"><small>$</small>$ item.price</div>
+
+    <div class="units">
+        <div class="btn minus">-</div>
+        <div class="number">numberOfUnits</div>
+        <div class="btn plus">+</div>
+    </div>
+</div>
+<!-- delete -->
 
                 </div>
 
