--- a/index.html
+++ b/index.html
@@ -86,7 +86,25 @@
                                     </div>
                                 </div>
                             </div>
-
+                            
+                            <div class="item">
+                                <div class="item-container">
+                                    <div class="item-img">
+                                        <img src="./img/Clothing-Fill-Color(1).png" alt="">
+                                    </div>
+                                    <div class="desc">
+                                        <h2>product.name</h2>
+                                        <h2> <small>$</small> $ product.price</h2>
+                                        <p>product.description</p>
+                                    </div>
+                                    <div class="add-to-wishlist">
+                                        <img src="./icons/heart.png" alt="">
+                                    </div>
+                                    <div class="add-to-cart">
+                                        <img src="./icons/bag-plus.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
                             <!-- delete -->
             </div>
 
