--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
                             <!-- delete -->
-                            <div class="item">
+              <!--               <div class="item">
                                 <div class="item-container">
                                     <div class="item-img">
                                         <img src="./img/Clothing-Fill-Color(1).png" alt="">
@@ -105,7 +105,7 @@
                                         <img src="./icons/bag-plus.png" alt="">
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- delete -->
             </div>
 
