--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     
 <!-- delete -->
 
-<div class="cart-item">
+<!-- <div class="cart-item">
     <div class="item-info">
         <img src="./img/Clothing-Fill-Color(1).png" alt="">
         <h4>item.name</h4>
@@ -152,7 +152,7 @@
         <div class="number">numberOfUnits</div>
         <div class="btn plus">+</div>
     </div>
-</div>
+</div> -->
 <!-- delete -->
 
                 </div>
